security-group.tf
resource "aws_security_group" "acesso-ssh" {
  name        = "acesso-ssh"
  description = "acesso-ssh"

  ingress = [
    {
        description      = "acesso-ssh"
        from_port        = 22
        to_port          = 22
        protocol         = "tcp"
        cidr_blocks      = ["189.6.118.158/32"]
        ipv6_cidr_blocks = []
        prefix_list_ids = []
        security_groups = []
        self = false
    }
  ]

  tags = {
    Name = "ssh"
  }
}

resource "aws_security_group" "acesso-ssh-us-east-2" {
    provider = aws.us-east-2
    name        = "acesso-ssh"
    description = "acesso-ssh"

    ingress = [
        {
            description      = "acesso-ssh"
            from_port        = 22
            to_port          = 22
            protocol         = "tcp"
            cidr_blocks      = ["189.6.118.158/32"]
            ipv6_cidr_blocks = []
            prefix_list_ids = []
            security_groups = []
            self = false
        }
    ]

    tags = {
        Name = "ssh"
    }
}
